Align sidebar block regions, fix edge to edge layout

--- a/css/style.css
+++ b/css/style.css
@@ -6492,7 +6492,8 @@ body > nav > div.navbar-header > button {
 /* Primary and secondary block regions */
 .region-sidebar-first,
 .region-sidebar-second {
-  margin-top: 50px; }
+  margin-top: 55px;
+  margin-bottom: 55px; }
   .region-sidebar-first nav a,
   .region-sidebar-second nav a {
     color: #555555;
@@ -6656,7 +6657,6 @@ h2, h3, h4, h5, p, table, th, td, tr, hr, blockquote,
 ul.local-actions,
 ul.tabs--primary,
 li.node-readmore,
-.contextual-region,
 .feed-icons,
 .field--name-field-event-contact,
 .field--name-field-event-cost,
